--- a/css/liLanding.css
+++ b/css/liLanding.css
@@ -1,19 +1,99 @@
+body,
+html {
+	margin:0;
+	padding:0;
+	min-height:100%;
+}
+
+.landingMenu ul {
+
+	display:block;
+	/*width:800px;
+	margin:auto;
+	border-radius:0 0 10px 10px;*/
+}
+
+.landingMenu a {
+	text-decoration:none;
+	color: #000;
+	border-bottom: 2px solid #FFF;
+}
+.landingMenu .cur {
+	/*border: none;*/
+	border-bottom: 2px solid #06A77D;
+}
+
+.landingItem .decoy {
+	font:500px/1000px Arial, Helvetica, sans-serif;
+	font-weight:900;
+
+	text-align:center;
+	position:relative;
+}
+
+.bg_0 {
+/*	height:600px;
+	line-height:600px;*/
+}
+
+.bg_1 {
+/*	height:600px;
+	line-height:600px;*/
+}
+
+.bg_2 {
+/*	height:600px;
+	line-height:600px;*/
+}
+
+.bg_3 {
+	height:600px;
+	line-height:600px;
+}
+
+.bg_4 {
+	height:600px;
+	line-height:600px;
+}
+
+.bg_5 {
+	height:600px;
+	line-height:600px;
+}
+
+.bg_6 {
+	height:600px;
+	line-height:600px;
+}
+
+.screenDecor { opacity:0;} 
+
+/*.landingItem {
+	height: 600px;
+	color: gray;
+}*/
 
 /*landingMenu*/
+
 .landingMenu ul {
-	text-align:center;
+	/*
+		text-align:center;
 	position:relative; 
 	padding:0;
 	margin:0 auto;
 	list-style:none;
 	text-align:center;
 	position:relative; 
+	*/
 }
 .landingMenu li {
 	display:inline-block;
-	//display:inline;
-	//vertical-align:top;
-	//zoom:1;
+	/*
+	display:inline;
+	vertical-align:top;
+	zoom:1;
+	*/
+	margin: 0 1vw;
 }
 
 .landingMenu a {
@@ -22,24 +102,26 @@
 
 .landingMenu {
 	position:absolute; 
+	padding: 0;
 	width:100%;
 	top:0;
 	left:0;
-	z-index:999
+	z-index:999;
 }
 
 .landingMenu.landingFix {
 	position:fixed;
-	width:100%;
+	/*width:100%;*/
 	top:0;
-	left:0;
+	/*left:0;*/
 }
 
 /*landingDotted*/
 .landingDotted {
 	position:fixed;
 	top:35%;
-	right:0;
+	left:0;
+	z-index:999
 }
 .landingDotted ul {
 	padding:0;
@@ -55,14 +137,19 @@
 }
 
 .landingDotted a {
-	width:20px;
-	height:20px;
+	width:10px;
+	height:10px;
+	margin: 5px;
 	border-radius:50%;
 	background:000;
 	text-indent:-99999px;
 	display:block;
-	background:#000;
+	background:#DDDDDD;
 }
 .landingDotted .cur {
-	background:#fff;
+	background:#06A77D;
+	width:20px;
+	height:20px;
+	margin: 0;
 }
+
