--- a/css/liLanding.css
+++ b/css/liLanding.css
@@ -56,18 +56,18 @@ html {
 }
 
 .bg_4 {
-	height:600px;
-	line-height:600px;
+/*	height:600px;
+	line-height:600px;*/
 }
 
 .bg_5 {
-	height:600px;
-	line-height:600px;
+/*	height:600px;
+	line-height:600px;*/
 }
 
 .bg_6 {
-	height:600px;
-	line-height:600px;
+/*	height:600px;
+	line-height:600px;*/
 }
 
 .screenDecor { opacity:0;} 
