--- a/css/liLanding.css
+++ b/css/liLanding.css
@@ -33,6 +33,7 @@ html {
 
 .bg_all {
 	min-height: 100vh;
+	/*vertical-align: middle;*/
 }
 
 .bg_0 {
@@ -53,6 +54,13 @@ html {
 .bg_3 {
 /*	height:600px;
 	line-height:600px;*/
+	background-color: #06A77D;
+}
+
+.bg_3 {
+/*	height:600px;
+	line-height:600px;*/
+	color: #FFFFFF;
 }
 
 .bg_4 {
