--- a/css/temp.css
+++ b/css/temp.css
@@ -96,6 +96,10 @@
 	background-image: url('../img/phone.png');
 }
 
+.tomoru-img-block-3 {
+	background-image: url('../img/block-3.png');
+}
+
 
 /*MAIN MENU*/
 
