--- a/css/temp.css
+++ b/css/temp.css
@@ -132,3 +132,18 @@ footer {
 	bottom: 0;
 	padding: 10px;
 }
+
+/*MISC*/
+
+.myrow {
+	margin-left: 0; margin-right: 0;
+}
+.mycol {
+	padding-left: 0; padding-right:0;
+}
+.slider-handle {
+	background-color: #FFF !important;
+	background-image: none;
+    background-repeat: repeat-x;
+    border: 2px solid #06A77D;
+}
