--- a/css/temp.css
+++ b/css/temp.css
@@ -147,3 +147,10 @@ footer {
     background-repeat: repeat-x;
     border: 2px solid #06A77D;
 }
+
+/*.row {
+	margin-left: 0; 
+	margin-right: 0;
+	padding-left: 0; 
+	padding-right:0;
+}*/
