--- a/css/scss/_default.scss
+++ b/css/scss/_default.scss
@@ -92,7 +92,38 @@
 	color: #FFFFFF;
 }
 
+/*TABS*/
 
+.block-3-tab {
+	font-family: 'Fira Sans' !important;
+	font-style: normal !important;
+	font-weight: normal !important;
+	line-height: normal !important;
+	font-size: 15px !important;
+
+	color: #3F88C5 !important;
+
+	border: none !important;
+	border-bottom: 1px dashed #3F88C5 !important;
+
+	padding: 3px;
+	margin: 10px;
+	margin-left: 10px;
+	margin-right: 10px;
+
+	// text-decoration: underline;
+	// text-decoration-style: dashed;
+}
+
+.block-3-tab.active {
+	font-weight: 500 !important;
+
+	color: #000000 !important;
+
+	border: none !important;
+
+	text-decoration: none;
+}
 /*IMAGES*/
 
 .tomoru-img-block {
@@ -135,6 +166,18 @@ footer {
 	right: 0;
 	bottom: 0;
 	padding: 10px;
+}
+
+/*CALCULATOR*/
+
+.calc-right-block-1 {
+	background-color: #F1F5FB;
+	border-left: 2px solid #06A77D;
+}
+
+.calc-right-block-2 {
+	color: #FFF;
+	background-color: #06A77D;
 }
 
 /*MISC*/
