--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,29 @@
   color: #FFFFFF;
 }
 
+/*TABS*/
+.block-3-tab {
+  font-family: 'Fira Sans' !important;
+  font-style: normal !important;
+  font-weight: normal !important;
+  line-height: normal !important;
+  font-size: 15px !important;
+  color: #3F88C5 !important;
+  border: none !important;
+  border-bottom: 1px dashed #3F88C5 !important;
+  padding: 3px;
+  margin: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.block-3-tab.active {
+  font-weight: 500 !important;
+  color: #000000 !important;
+  border: none !important;
+  text-decoration: none;
+}
+
 /*IMAGES*/
 .tomoru-img-block {
   background-repeat: no-repeat;
@@ -129,6 +152,17 @@ footer {
   padding: 10px;
 }
 
+/*CALCULATOR*/
+.calc-right-block-1 {
+  background-color: #F1F5FB;
+  border-left: 2px solid #06A77D;
+}
+
+.calc-right-block-2 {
+  color: #FFF;
+  background-color: #06A77D;
+}
+
 /*MISC*/
 .myrow {
   margin-left: 0;
@@ -154,6 +188,60 @@ footer {
 	padding-right:0;
 }*/
 /* Base styles for simple browsers. */
+/*FONTS*/
+.tomoru-font-1 {
+  /*margin-top: 70px;*/
+  font-family: Fira Sans;
+  font-style: normal;
+  font-weight: normal;
+  line-height: normal;
+  font-size: 24px;
+  color: #06A77D;
+}
+
+.tomoru-font-2 {
+  font-family: Fira Sans;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 26px;
+  font-size: 18px;
+  color: #172A3A;
+}
+
+.tomoru-font-3 {
+  font-family: Fira Sans;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  font-size: 13px;
+  color: #000000;
+}
+
+.tomoru-font-4 {
+  font-family: Fira Sans;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 17px;
+  font-size: 13px;
+  color: #000000;
+}
+
+.tomoru-font-5 {
+  font-family: Fira Sans;
+  font-style: normal;
+  font-weight: normal;
+  line-height: normal;
+  font-size: 18px;
+  color: #37474F;
+}
+
+#tomoru-img-macbook-right {
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-position: right;
+  background-image: url("../img/macbook-mobile.png");
+}
+
 @media only screen and (min-width: 320px) {
   /* Old phones */
 }
@@ -164,6 +252,48 @@ footer {
 
 @media only screen and (min-width: 768px) {
   /* Tablets — portrait. */
+  /*FONTS*/
+  .tomoru-font-1 {
+    /*margin-top: 70px;*/
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 44px;
+    color: #06A77D;
+  }
+  .tomoru-font-2 {
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 39px;
+    font-size: 27px;
+    color: #172A3A;
+  }
+  .tomoru-font-3 {
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 30px;
+    font-size: 15px;
+    color: #000000;
+  }
+  .tomoru-font-4 {
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.6);
+  }
+  .tomoru-font-5 {
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 20px;
+    color: #37474F;
+  }
 }
 
 @media only screen and (min-width: 992px) {
