--- a/css/styles.css
+++ b/css/styles.css
@@ -1,310 +1,1 @@
-@charset "UTF-8";
-/* CSS Start */
-@import url("https://fonts.googleapis.com/css?family=Fira+Sans");
-* {
-  font-family: 'Fira Sans';
-}
-
-/*FONTS*/
-.tomoru-font-1 {
-  /*margin-top: 70px;*/
-  font-family: Fira Sans;
-  font-style: normal;
-  font-weight: normal;
-  line-height: normal;
-  font-size: 44px;
-  color: #06A77D;
-}
-
-.tomoru-font-2 {
-  font-family: Fira Sans;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 39px;
-  font-size: 27px;
-  color: #172A3A;
-}
-
-.tomoru-font-3 {
-  font-family: Fira Sans;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 30px;
-  font-size: 15px;
-  color: #000000;
-}
-
-.tomoru-font-4 {
-  font-family: Fira Sans;
-  font-style: normal;
-  font-weight: normal;
-  line-height: normal;
-  font-size: 14px;
-  color: rgba(0, 0, 0, 0.6);
-}
-
-.tomoru-font-5 {
-  font-family: Fira Sans;
-  font-style: normal;
-  font-weight: normal;
-  line-height: normal;
-  font-size: 20px;
-  color: #37474F;
-}
-
-/*BUTTONS*/
-.tomoru-btn-1 {
-  display: inline-block;
-  color: #06A77D;
-  padding: 10px 20px;
-  /*margin-top: 50px;*/
-  border: 1px solid #06A77D;
-  border-radius: 20px;
-}
-
-.tomoru-btn-1:hover {
-  text-decoration: none;
-  color: #000;
-  border: 1px solid #000;
-}
-
-.tomoru-btn-2 {
-  background-color: #F1F5FB;
-  color: #06A77D;
-  border: 1px solid #AEC5EB;
-  box-sizing: border-box;
-  border-radius: 4px;
-}
-
-.tomoru-btn-2.active {
-  background-color: #06A77D;
-  color: #FFFFFF;
-}
-
-.tomoru-btn-2:hover {
-  text-decoration: none;
-  background-color: #06A77D;
-  color: #FFFFFF;
-}
-
-/*TABS*/
-.block-3-tab {
-  font-family: 'Fira Sans' !important;
-  font-style: normal !important;
-  font-weight: normal !important;
-  line-height: normal !important;
-  font-size: 15px !important;
-  color: #3F88C5 !important;
-  border: none !important;
-  border-bottom: 1px dashed #3F88C5 !important;
-  padding: 3px;
-  margin: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.block-3-tab.active {
-  font-weight: 500 !important;
-  color: #000000 !important;
-  border: none !important;
-  text-decoration: none;
-}
-
-/*IMAGES*/
-.tomoru-img-block {
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-}
-
-.tomoru-img-block-macbook {
-  background-image: url("../img/macbook.png");
-}
-
-.tomoru-img-block-phone {
-  background-image: url("../img/phone.png");
-}
-
-.tomoru-img-block-3 {
-  background-image: url("../img/block-3.png");
-}
-
-/*MAIN MENU*/
-.navbar-brand {
-  margin: 0 20px;
-  font-weight: 600;
-  border-bottom: 2px solid #fff;
-}
-
-.navbar {
-  background-color: #fff;
-  border-bottom: 1px solid #DDDDDD;
-}
-
-.nav-link {
-  color: #000;
-}
-
-footer {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  padding: 10px;
-}
-
-/*CALCULATOR*/
-.calc-right-block-1 {
-  background-color: #F1F5FB;
-  border-left: 2px solid #06A77D;
-}
-
-.calc-right-block-2 {
-  color: #FFF;
-  background-color: #06A77D;
-}
-
-/*MISC*/
-.myrow {
-  margin-left: 0;
-  margin-right: 0;
-}
-
-.mycol {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.slider-handle {
-  background-color: #FFF !important;
-  background-image: none;
-  background-repeat: repeat-x;
-  border: 2px solid #06A77D;
-}
-
-/*.row {
-	margin-left: 0; 
-	margin-right: 0;
-	padding-left: 0; 
-	padding-right:0;
-}*/
-/* Base styles for simple browsers. */
-/*FONTS*/
-.tomoru-font-1 {
-  /*margin-top: 70px;*/
-  font-family: Fira Sans;
-  font-style: normal;
-  font-weight: normal;
-  line-height: normal;
-  font-size: 24px;
-  color: #06A77D;
-}
-
-.tomoru-font-2 {
-  font-family: Fira Sans;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 26px;
-  font-size: 18px;
-  color: #172A3A;
-}
-
-.tomoru-font-3 {
-  font-family: Fira Sans;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
-  font-size: 13px;
-  color: #000000;
-}
-
-.tomoru-font-4 {
-  font-family: Fira Sans;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 17px;
-  font-size: 13px;
-  color: #000000;
-}
-
-.tomoru-font-5 {
-  font-family: Fira Sans;
-  font-style: normal;
-  font-weight: normal;
-  line-height: normal;
-  font-size: 18px;
-  color: #37474F;
-}
-
-#tomoru-img-macbook-right {
-  background-repeat: no-repeat;
-  background-size: 50%;
-  background-position: right;
-  background-image: url("../img/macbook-mobile.png");
-}
-
-@media only screen and (min-width: 320px) {
-  /* Old phones */
-}
-
-@media only screen and (min-width: 480px) {
-  /* Android, iPhone, etc. */
-}
-
-@media only screen and (min-width: 768px) {
-  /* Tablets — portrait. */
-  /*FONTS*/
-  .tomoru-font-1 {
-    /*margin-top: 70px;*/
-    font-family: Fira Sans;
-    font-style: normal;
-    font-weight: normal;
-    line-height: normal;
-    font-size: 44px;
-    color: #06A77D;
-  }
-  .tomoru-font-2 {
-    font-family: Fira Sans;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 39px;
-    font-size: 27px;
-    color: #172A3A;
-  }
-  .tomoru-font-3 {
-    font-family: Fira Sans;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 30px;
-    font-size: 15px;
-    color: #000000;
-  }
-  .tomoru-font-4 {
-    font-family: Fira Sans;
-    font-style: normal;
-    font-weight: normal;
-    line-height: normal;
-    font-size: 14px;
-    color: rgba(0, 0, 0, 0.6);
-  }
-  .tomoru-font-5 {
-    font-family: Fira Sans;
-    font-style: normal;
-    font-weight: normal;
-    line-height: normal;
-    font-size: 20px;
-    color: #37474F;
-  }
-  #tomoru-img-macbook-right {
-    background-image: none;
-  }
-}
-
-@media only screen and (min-width: 992px) {
-  /* Landscape tablets, notebooks, desktop. */
-}
-
-@media only screen and (min-width: 1382px) {
-  /* Hires desktops, TVs. */
-}
-
-/* CSS End */
+@import url("https://fonts.googleapis.com/css?family=Fira+Sans");*{font-family:'Fira Sans'}.tomoru-font-1{font-family:Fira Sans;font-style:normal;font-weight:normal;line-height:normal;font-size:44px;color:#06A77D}.tomoru-font-2{font-family:Fira Sans;font-style:normal;font-weight:300;line-height:39px;font-size:27px;color:#172A3A}.tomoru-font-3{font-family:Fira Sans;font-style:normal;font-weight:300;line-height:30px;font-size:15px;color:#000000}.tomoru-font-4{font-family:Fira Sans;font-style:normal;font-weight:normal;line-height:normal;font-size:14px;color:rgba(0,0,0,0.6)}.tomoru-font-5{font-family:Fira Sans;font-style:normal;font-weight:normal;line-height:normal;font-size:20px;color:#37474F}.tomoru-btn-1{display:inline-block;color:#06A77D;padding:10px 20px;border:1px solid #06A77D;border-radius:20px}.tomoru-btn-1:hover{text-decoration:none;color:#FFFFFF;background-color:#06A77D;border-color:#FFFFFF}.tomoru-btn-2{background-color:#F1F5FB;color:#06A77D;border:1px solid #AEC5EB;box-sizing:border-box;border-radius:4px}.tomoru-btn-2.active{background-color:#06A77D;color:#FFFFFF}.tomoru-btn-2:hover{text-decoration:none;background-color:#06A77D;color:#FFFFFF}.tomoru-btn-2-block-3{color:#06A77D !important;background-color:#FFFFFF !important}.tomoru-btn-2-block-3:hover{background-color:#06A77D !important;color:#FFFFFF !important}.block-3-tab{font-family:'Fira Sans' !important;font-style:normal !important;font-weight:normal !important;line-height:normal !important;font-size:15px !important;color:#3F88C5 !important;border:none !important;border-bottom:1px dashed #3F88C5 !important;padding:3px;margin:10px;margin-left:10px;margin-right:10px}.block-3-tab.active{font-weight:500 !important;color:#000000 !important;border:none !important;text-decoration:none}.tomoru-img-block{background-repeat:no-repeat;background-size:contain;background-position:center}.tomoru-img-block-macbook{background-image:url("../img/macbook.png")}.tomoru-img-block-phone{background-image:url("../img/phone.png")}.tomoru-img-block-3{background-image:url("../img/block-3.png")}.navbar-brand{margin:0 20px;font-weight:600;border-bottom:2px solid #fff}.navbar{background-color:#fff;border-bottom:1px solid #DDDDDD}.nav-link{color:#000}footer{position:fixed;right:0;bottom:0;padding:10px}.calc-right-block-1{background-color:#F1F5FB;border-left:2px solid #06A77D}.calc-right-block-2{color:#FFF;background-color:#06A77D}.myrow{margin-left:0;margin-right:0}.mycol{padding-left:0;padding-right:0}.slider-handle{background-color:#FFF !important;background-image:none;background-repeat:repeat-x;border:2px solid #06A77D}.tomoru-font-1{font-family:Fira Sans;font-style:normal;font-weight:normal;line-height:normal;font-size:24px;color:#06A77D}.tomoru-font-2{font-family:Fira Sans;font-style:normal;font-weight:300;line-height:26px;font-size:18px;color:#172A3A}.tomoru-font-3{font-family:Fira Sans;font-style:normal;font-weight:300;line-height:normal;font-size:13px;color:#000000}.tomoru-font-4{font-family:Fira Sans;font-style:normal;font-weight:300;line-height:17px;font-size:13px;color:#000000}.tomoru-font-5{font-family:Fira Sans;font-style:normal;font-weight:normal;line-height:normal;font-size:18px;color:#37474F}#tomoru-img-macbook-right{background-repeat:no-repeat;background-size:50%;background-position:right;background-image:url("../img/macbook-mobile.png")}@media only screen and (min-width: 768px){.tomoru-font-1{font-family:Fira Sans;font-style:normal;font-weight:normal;line-height:normal;font-size:44px;color:#06A77D}.tomoru-font-2{font-family:Fira Sans;font-style:normal;font-weight:300;line-height:39px;font-size:27px;color:#172A3A}.tomoru-font-3{font-family:Fira Sans;font-style:normal;font-weight:300;line-height:30px;font-size:15px;color:#000000}.tomoru-font-4{font-family:Fira Sans;font-style:normal;font-weight:normal;line-height:normal;font-size:14px;color:rgba(0,0,0,0.6)}.tomoru-font-5{font-family:Fira Sans;font-style:normal;font-weight:normal;line-height:normal;font-size:20px;color:#37474F}#tomoru-img-macbook-right{background-image:none}}
